// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jEDwTF-theme-primaryDark .c-GSaiK {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(even) {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-codIxD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gbDJOS-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with a themed header 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jEDwTF-theme-primaryDark .c-GSaiK {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-goJwcl-size-lg .c-cCZzXk,
  .c-cwQMhQ-goJwcl-size-lg .c-GSaiK,
  .c-cwQMhQ-goJwcl-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }

  .c-PJLV-gmYsCp-theme-primary .c-GSaiK {
    background: var(--colors-primary);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-codIxD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-gmYsCp-theme-primary"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gbDJOS-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jEDwTF-theme-primaryDark .c-GSaiK {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-goJwcl-size-lg .c-cCZzXk,
  .c-cwQMhQ-goJwcl-size-lg .c-GSaiK,
  .c-cwQMhQ-goJwcl-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-goJwcl-size-lg c-cwQMhQ-codIxD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gbDJOS-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with square corners 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-codIxD-corners-round [object Object]:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jEDwTF-theme-primaryDark .c-GSaiK {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gbDJOS-striped-true [object Object]:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-goJwcl-size-lg .c-cCZzXk,
  .c-cwQMhQ-goJwcl-size-lg .c-GSaiK,
  .c-cwQMhQ-goJwcl-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gbDJOS-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
